; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw_rdma.c_rds_iw_set_scatterlist.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw_rdma.c_rds_iw_set_scatterlist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_iw_scatterlist = type { i32, i64, i64, i64, %struct.scatterlist* }
%struct.scatterlist = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rds_iw_scatterlist*, %struct.scatterlist*, i32)* @rds_iw_set_scatterlist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rds_iw_set_scatterlist(%struct.rds_iw_scatterlist* %0, %struct.scatterlist* %1, i32 %2) #0 {
  %4 = alloca %struct.rds_iw_scatterlist*, align 8
  %5 = alloca %struct.scatterlist*, align 8
  %6 = alloca i32, align 4
  store %struct.rds_iw_scatterlist* %0, %struct.rds_iw_scatterlist** %4, align 8
  store %struct.scatterlist* %1, %struct.scatterlist** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.scatterlist*, %struct.scatterlist** %5, align 8
  %8 = load %struct.rds_iw_scatterlist*, %struct.rds_iw_scatterlist** %4, align 8
  %9 = getelementptr inbounds %struct.rds_iw_scatterlist, %struct.rds_iw_scatterlist* %8, i32 0, i32 4
  store %struct.scatterlist* %7, %struct.scatterlist** %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.rds_iw_scatterlist*, %struct.rds_iw_scatterlist** %4, align 8
  %12 = getelementptr inbounds %struct.rds_iw_scatterlist, %struct.rds_iw_scatterlist* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  %13 = load %struct.rds_iw_scatterlist*, %struct.rds_iw_scatterlist** %4, align 8
  %14 = getelementptr inbounds %struct.rds_iw_scatterlist, %struct.rds_iw_scatterlist* %13, i32 0, i32 3
  store i64 0, i64* %14, align 8
  %15 = load %struct.rds_iw_scatterlist*, %struct.rds_iw_scatterlist** %4, align 8
  %16 = getelementptr inbounds %struct.rds_iw_scatterlist, %struct.rds_iw_scatterlist* %15, i32 0, i32 2
  store i64 0, i64* %16, align 8
  %17 = load %struct.rds_iw_scatterlist*, %struct.rds_iw_scatterlist** %4, align 8
  %18 = getelementptr inbounds %struct.rds_iw_scatterlist, %struct.rds_iw_scatterlist* %17, i32 0, i32 1
  store i64 0, i64* %18, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
